# rnexus

./: .gitignore  .pre-commit-config.yaml  CI_CD_INTEGRATION.md  DATABASE_STRUCTURE.md  DEPENDENCIES_UPDATE.md  DEVELOPMENT_TOOLS_SUMMARY.md  PHONE_FIELD_ISSUE_RESOLVED.md  PHONE_FIELD_LOGIN_FIX.md  PHONE_FIELD_RENAMING_COMPLETE.md  PROFILE_DESIGN_IMPROVEMENTS.md  PROFILE_LEFT_CARD_FIXES.md  PROJECT_ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE_SYSTEM.md  SETUP_GUIDE.md  activate_venv.sh  auth_test.html  check_admin.py  check_db.py  debug_phone_fields.py  package-lock.json  package.json  start_servers.sh  test_address_debug.html  test_address_functionality.html  test_auth.html  test_avatar.html  test_clean_console.html  test_favorites_functionality.html  test_final_syntax_fixes.html  test_focus_styling.html  test_graphql_query.html  test_graphql_schema.html  test_login.py  test_maternal_last_name_final_fix.html  test_maternal_last_name_fix.html  test_new_field_naming.html  test_profile_save.html  test_syntax_fixes.html
backend/: .pre-commit-config.yaml  DATABASE_POPULATION_README.md  Makefile  TYPING_FIXES.md  activate_venv.sh  add_admin_education_experience.py  create_sample_activities.py  fix_corrupted_json.py  github_mcp_service.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_quality_checks.sh  setup_database 2.py  test_imports.py  test_jwt.py  test_mutation.py  test_system_websocket.py
backend/api/: admin.py  consumers.py  decorators.py  middleware.py  models.py  models_new.py  permissions.py  routers.py  routing.py  schema.py  schema_new.py  schema_test.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
backend/api/migrations/: 0001_initial.py  0002_systemmessage.py  0003_chat_message_caption_message_contact_email_and_more.py  0004_update_updateattachment_updatemedia_updaterelation_and_more.py  0006_updatecomment_updatelike.py  (+25 more)
backend/core/: asgi 2.py  asgi.py  routing.py  settings.py  settings_test.py  urls.py
backend/docs/: DATABASE_ENRICHMENT_SUMMARY.md  LOCATION_SYSTEM_SUMMARY.md  README.md  VENV_SETUP.md
backend/scripts/: add_admin_education_experience.py  add_baja_california_cities.py  check_cities.py  check_news_data.py  cleanup_mexican_states.py  create_sample_user_profiles.py  debug_jwt.py  debug_profile_fields.py  decode_token.py  populate_all_cities.py  populate_all_states.py  populate_california_zipcodes.py  populate_location_data.py  populate_organizational_structure.py  setup_database.py  show_sample_data.py  verify_admin_data.py
backend/tests/: test_activities_api.py  test_auth.py  test_graphql_profile.py  test_imports.py  test_jwt.py  test_location_graphql.html  test_location_graphql.py  test_profile_data.py  test_profile_graphql.html  test_simple_graphql.py  test_smoke_v2.py
(+409 files in other folders)
